9454: Fix search examples overflow on media @print

--- a/app/assets/stylesheets/global/_search.scss
+++ b/app/assets/stylesheets/global/_search.scss
@@ -1,4 +1,7 @@
 form.search-form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   margin-bottom: 10px;
 
   input.search-str {
